Giao diện, logic CRUD chuyên khoa

--- a/frontend/src/shared/locales/en.json
+++ b/frontend/src/shared/locales/en.json
@@ -1,6 +1,27 @@
 {
+    "login": {},
+    "register": {},
+    "verifyOtp": {},
+    "forgotPassword": {},
+    "resetPassword": {},
     "adminSideBar": {
         "db": "Dashboard",
-        "ap": "Appointments"
+        "ap": "Appointments",
+        "sp": "Specialties"
+    },
+    "specialty": {
+        "tt": "Specialties",
+        "ds": "Dashboard / Specialties",
+        "nb": "Add New",
+        "epg": "Entries per page",
+        "im": "Image",
+        "na": "Name",
+        "dc": "Description",
+        "st": "Status",
+        "at": "Actions",
+        "an": "Add New Specialty",
+        "ed": "Edit Specialty",
+        "np": "Name Specialty",
+        "ul": "Upload"
     }
 }
