Thêm logic cập nhật giá cho service

--- a/frontend/src/shared/locales/en.json
+++ b/frontend/src/shared/locales/en.json
@@ -8,7 +8,10 @@
         "db": "Dashboard",
         "ap": "Appointments",
         "sp": "Specialties",
-        "sv": "Services"
+        "sv": "Services",
+        "dt": "Doctors",
+        "pt": "Patients",
+        "rc": "Receptionists"
     },
     "specialty": {
         "tt": "Specialties",
@@ -33,11 +36,12 @@
         "na": "Name",
         "dc": "Description",
         "dm": "Duration (minutes)",
-        "pr": "Price (VND)",
+        "pr": "Booking price (VND)",
         "st": "Status",
         "at": "Actions",
         "an": "Add New Service",
         "ed": "Edit Service",
+        "ur": "Update Price",
         "ns": "Name Service"
     }
 }
