--- a/frontend/src/shared/locales/vi.json
+++ b/frontend/src/shared/locales/vi.json
@@ -219,7 +219,9 @@
         "spo": "Hỗ trợ",
         "csbm": "Chính sách bảo mật",
         "dksd": "Điều khoản sử dụng",
-        "lhe": "Liên hệ"
+        "lhe": "Liên hệ",
+        "pf": "Hồ sơ cá nhân",
+        "lo": "Đăng xuất"
     },
     "detalDoctor": {
         "dt": "Bác sĩ: ",
@@ -236,5 +238,33 @@
         "cdt": "Chọn thời gian đặt lịch (phí đặt lịch 0đ)",
         "int": "Giới thiệu ngắn",
         "exp": "Kinh nghiệm làm việc"
+    },
+    "patientProfile": {
+        "tt": "Thông tin cá nhân",
+        "ph": "Số điện thoại: ",
+        "bd": "Ngày sinh ",
+        "gd": "Giới tính ",
+        "dt": "Dân tộc",
+        "et": "Quốc tịch",
+        "ad": "Địa chỉ",
+        "vc": "Tỉnh / Thành phố",
+        "cvc": "Chọn Tỉnh / Thành phố",
+        "vp": "Phường / Xã",
+        "cvp": "Chọn Phường / Xã",
+        "ct": "Địa chỉ chi tiết",
+        "nct": "Nhập địa chỉ chi tiết",
+        "fa": "Địa chỉ gia đình",
+        "in": "Số thẻ bảo hiểm",
+        "it": "Thời hạn thẻ",
+        "np": "Ghi chú PMH (Past Medical History)",
+        "ma": "Nam",
+        "fm": "Nữ",
+        "ot": "Khác",
+        "xt": "Đã xác thực hồ sơ",
+        "cn": "Cập nhật hồ sơ",
+        "cths": "Chưa tạo hồ sơ",
+        "ths": "Tạo hồ sơ",
+        "ttcb": "Thông tin cơ bản",
+        "ttyt": "Thông tin y tế"
     }
 }
